@@ -21,6 +21,9 @@
 
 ## :gear: Installation
 
+LITIENGINE requires Java 25 or later; Java 22, 23, and 24 are no longer supported. Applications that enable gamepad support should be launched with
+`--enable-native-access=ALL-UNNAMED` to grant Input4j access to the Foreign Function & Memory API.
+
 ### :elephant: Gradle
 The LITIENGINE Java library is hosted on the [Maven Central Repository](https://search.maven.org/artifact/de.gurkenlabs/litiengine), i.e. fetching it with Gradle is as simple as configuring your source repository and defining the dependency as shown below.
 #### Groovy syntax:
